--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,15 @@
+body {
+    background-image: url(https://s3.amazonaws.com/shecodesio-production/uploads/files/000/142/877/original/Comp-Sci.jpg?1725969122);
+    background-blend-mode: lighten;
+    background-color: rgba(255, 255, 255, 0.8);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
 
+.container {
+    width: auto;
+    height: auto;
+    background-color: rgba(3, 78, 131, 0.478);
+    color: white;
+    text-align: center;
+}
