--- a/src/style.css
+++ b/src/style.css
@@ -30,9 +30,19 @@ h1 {
 }
 
 form {
-    margin: 0 0 30px 0px;
+    margin: 0px;
     display: flex;
     justify-content: center;
+}
+
+.example {
+    display: block;
+    display: flex;
+    justify-content: left;
+    margin-left: 15%;
+    font-style: italic;
+    font-size: 12px;
+    color: rgb(236, 233, 233);
 }
 
 .instructions {
@@ -61,4 +71,18 @@ form {
     padding: 20px;
     margin-bottom: 40px;
     line-height: 2;
+}
+
+.hidden {
+    display: none;
+}
+
+@keyframes blink {
+    50% {
+        opacity: 0;
+    }
+}
+
+.blink {
+    animation: blink 0.75s step-start 0s infinite;
 }
