--- a/src/style.css
+++ b/src/style.css
@@ -3,7 +3,7 @@ body {
     background-blend-mode: lighten;
     background-color: rgba(255, 255, 255, 0.6);
     background-repeat: no-repeat;
-    background-size: 100%;
+    background-size: cover;
     font-family: "Satisfy", cursive;
     font-weight: 400;
     font-style: normal;
